# fantasy-console

./: .gitignore  README.md  package-lock.json  package.json  rustfmt.toml
sample-cartridge/: .gitignore  package.json  spack.config.js  tsconfig.json
sample-cartridge/content/cartridge/models/: kitchen.mtl  scene.blend1
sample-cartridge/src/: another-object.ts  my-object.ts
sample-cartridge/src/lib/: util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fantasy.rs  main.rs
src-web/: Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-web/public/cartridge/models/: burgerCheese.mtl
src-web/public/models/: ball.mtl  kitchen.mtl  scene.blend  scene.blend1  scene.mtl
src-web/src/: index.ts  main.ts  styles.css
src-web/src/engine/: cartridge.rs  engine.ts  example_scene.rs  input.rs  lib.rs  meshes.rs  renderer.rs  script-loader.ts  textures.rs  types.rs  web.rs  webgl_demo.rs
src-web/src/styles/: components.scss  configuration.scss  index.scss
src/core/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
src/core/scripts/: publish.js
src/core/src/: index.ts
src/core/src/modules/: IModule.ts  Input.ts  index.ts
src/core/src/modules/World/: WorldModule.ts  WorldQuery.ts  index.ts
src/core/src/util/: Color3.ts  Color4.ts  Vector2.ts  Vector3.ts  index.ts
src/core/src/world/: GameObject.ts  GameObjectComponent.ts  Transform.ts  index.ts
src/core/src/world/components/: CameraComponent.ts  DirectionalLightComponent.ts  MeshComponent.ts  PointLightComponent.ts  ScriptComponent.ts  index.ts
src/editor/: eslint.config.mjs  package-lock.json  package.json
src/editor/src/app/: Cargo.toml  tauri.conf.json
src/editor/src/app/capabilities/: default.json  migrated.json
src/editor/src/app/src/: build.rs  filesystem.rs  lib.rs  main.rs  polyzone.rs
src/editor/src/app/src/filesystem/: assets.rs  project.rs  scenes.rs
src/editor/src/cli/: Cargo.toml
src/editor/src/cli/src/: main.rs
src/editor/src/web/: index.html  next.config.mjs  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
src/editor/src/web/lib/: index.ts
src/editor/src/web/lib/application/: ApplicationData.ts  ApplicationDataController.ts  index.ts
src/editor/src/web/lib/composer/: Composer.ts  ComposerController.ts  DebugFileSystem.ts  SceneView.ts  constants.ts
src/editor/src/web/lib/filesystem/: TauriFileSystem.ts
src/editor/src/web/lib/modal/: index.ts
src/editor/src/web/lib/mutation/: IContinuousMutation.ts  IMutation.ts  Mutator.ts  util.ts
src/editor/src/web/lib/project/: AssetDb.ts  ProjectAssetsWatcher.ts  ProjectController.ts  SceneDb.ts
src/editor/src/web/lib/tauri/: index.ts  mock.ts  path.ts  watch.ts
src/editor/src/web/lib/util/: JsoncContainer.ts  TauriCommands.ts  TauriEvents.ts  path.ts  vector.ts
src/editor/src/web/public/project/: sample.pzproj
src/editor/src/web/src/: index.scss  index.ts
src/editor/src/web/src/interactions/: assets.ts  index.ts  scenes.ts
src/editor/src/web/src/pages/: 404.tsx  _app.tsx  _document.tsx  index.tsx  tauri.tsx
src/editor/src/web/src/styles/: index.css
src/runtime/: Cargo.toml  build.sh  package-lock.json  package.json  tsconfig.core.json  tsconfig.json
src/runtime/scripts/: generate-core.js
src/runtime/src/: Game.ts  Resolver.ts  ScriptLoader.ts  cartridge.rs  cartridge.ts  constants.ts  core.g.ts  core.ts  engine.ts  example_scene.rs  index.ts  lib.rs  script-loader.ts  web.rs
src/runtime/src/cartridge/: Cartridge.ts  index.ts
src/runtime/src/cartridge/archive/: AssetDefinition.ts  CartridgeArchive.ts  CartridgeArchiveFileReference.ts  CartridgeArchiveManifest.ts  GameObjectDefinition.ts  SceneDefinition.ts  SceneObjectDefinition.ts  index.ts
src/runtime/src/cartridge/archive/components/: CameraComponentDefinition.ts  ComponentDefinition.ts  ComponentDefinitionType.ts  DirectionalLightComponentDefinition.ts  MeshComponentDefinition.ts  PointLightComponentDefinition.ts  ScriptComponentDefinition.ts  index.ts
src/runtime/src/cartridge/archive/util/: Color.ts  Vector3.ts  index.ts  vector.ts
src/runtime/src/cartridge/config/: AssetConfig.ts  AssetDb.ts  AssetType.ts  Cartridge.ts  GameObjectConfig.ts  SceneConfig.ts  SceneDb.ts  TransformConfig.ts  VirtualFile.ts  VirtualFileSystem.ts  index.ts
src/runtime/src/cartridge/config/util/: index.ts
src/runtime/src/cartridge/data/: GameObjectData.ts  TransformData.ts  index.ts
src/runtime/src/core/: Cargo.toml  GameObject.ts  index.ts  input.rs  lib.rs  objects.rs
src/runtime/src/engine/: Cargo.toml  cartridge.rs  engine.rs  lib.rs  meshes.rs  script-loader.ts  textures.rs  util.ts  web.rs
src/runtime/src/filesystem/: CartridgeFileSystem.ts  IFileSystem.ts  VirtualFile.ts  index.ts
src/runtime/src/modules/: BabylonInputManager.ts  Input.ts  Module.ts  index.ts
src/runtime/src/util/: color.ts  index.ts  json.ts  path.ts  vectors.ts
src/runtime/src/util/color/: WrappedColor3Babylon.ts  index.ts
src/runtime/src/util/vector/: WrappedVector3Babylon.ts  index.ts
src/runtime/src/world/: GameObject.ts  GameObjectBabylon.ts  GameObjectComponent.ts  InternalGameObjectComponent.ts  Transform.ts  TransformBabylon.ts  World.ts  WorldState.ts  index.ts
src/runtime/src/world/components/: CameraComponent.ts  CameraComponentBabylon.ts  DirectionalLightComponent.ts  DirectionalLightComponentBabylon.ts  MeshComponent.ts  MeshComponentBabylon.ts  PointLightComponent.ts  PointLightComponentBabylon.ts  index.ts
src/sample-cartridge/: .swcrc  package-lock.json  package.json  tsconfig.json
src/sample-cartridge/cartridge/: manifest.json
src/sample-cartridge/content/cartridge/models/: scene.blend  scene.mtl
src/sample-cartridge/src/: another-object.ts  my-object.ts  scene.blend
src/sample-cartridge/src/models/: scene.blend1
src/sample-cartridge/src/scripts/: my-object.ts
src/web-player/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/web-player/src/scripts/: index.ts
src/web-player/src/styles/: brand.scss  components.scss
(+275 files in other folders)
