[package]
name = "fantasy-console"
version = "0.1.0"
authors = ["peabnuts123"]
edition = "2018"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = false
# Should we omit the default import path?
omit-default-module-path = false

[profile.release]
opt-level = 3
lto = true


[lib]
crate-type = ["cdylib", "rlib"]
path = "src/engine/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.69"
glam = "0.27.0"
wasm-bindgen-futures = "0.4.42"
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "tiff"] }

[dependencies.tobj]
version = "4.0.2"
default-features = false
features = ["async"]

[dependencies.console_error_panic_hook]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
version = "0.1.7"
optional = true

[dependencies.web-sys]
version = "0.3.69"
features = ['console']


[dev-dependencies]
wasm-bindgen-test = "0.3.34"
