[package]
name = "fantasy-console-editor"
version = "0.0.0"
description = "A fantasy console"
authors = ["peabnuts123"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fantasy-console-editor" # @NOTE must match package name for Tauri to work
path = "src/main.rs"

# @TODO (one day)
# [[bin]]
# name = "fantasy-console-cli"
# path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-save", "path-all", "protocol-asset", "dialog-open", "fs-write-file", "fs-read-dir", "fs-read-file", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2.1.1"
walkdir = "2.5.0"
swc = "0.283.0"
swc_common = "0.37.2"
swc_ecma_parser = "0.149.0"
swc_ecma_ast = "0.118.0"
swc_ecma_transforms_typescript = "0.195.1"
swc_ecma_visit = "0.104.3"
swc_ecma_transforms_module = "0.187.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
