[package]
name = "fantasy-console-editor"
version = "0.0.0"
description = "A fantasy console"
authors = ["peabnuts123"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique, such that it won't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fantasy_console_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]



# @TODO (one day)
# [[bin]]
# name = "fantasy-console-cli"
# path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2.1.1"
walkdir = "2.5.0"
swc = "3.0.1"
swc_common = "2.0.1"
swc_ecma_parser = "3.0.0"
swc_ecma_ast = "2.0.0"
swc_ecma_transforms_typescript = "3.0.0"
swc_ecma_visit = "2.0.0"
swc_ecma_transforms_module = "3.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
