[package]
name = "fantasy-console-editor"
version = "0.0.0"
description = "A fantasy console"
authors = ["peabnuts123"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique, such that it won't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fantasy_console_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


# @TODO (one day)
# [[bin]]
# name = "fantasy-console-cli"
# path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
debounce = "0.2.2"
ignore = "0.4.23"
ignore-files = "3.0.2"
log = "0.4.22"
notify = "7.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc = "3.0.1"
swc_common = "2.0.1"
swc_ecma_ast = "2.0.0"
swc_ecma_parser = "3.0.0"
swc_ecma_transforms_module = "3.0.0"
swc_ecma_transforms_typescript = "3.0.0"
swc_ecma_visit = "2.0.0"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-shell = "2"
tokio = "1.42.0"
twox-hash = { version = "2.0.1", features = ["xxhash3_64", "std"] }
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"
zip = "2.1.1"
