[package]
name = "fantasy-console-cli"
version = "0.0.0"
description = "A fantasy console"
authors = ["peabnuts123"]
edition = "2021"

[dependencies]
zip = "2.1.1"
walkdir = "2.5.0"
swc = "0.275.1"
swc_common = "0.33.26"
swc_ecma_parser = "0.144.1"
swc_ecma_ast = "0.113.5"
swc_ecma_transforms_typescript = "0.189.1"
swc_ecma_visit = "0.99.1"
swc_ecma_transforms_module = "0.181.2"
