[package]
name = "fantasy_engine"
publish = false
version = "0.1.0"
authors = ["peabnuts123"]
edition = "2021"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = false
# Should we omit the default import path?
omit-default-module-path = false


[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
fantasy_core = { path = "../core" }
wasm-bindgen = "0.2.84"
js-sys = "0.3.69"
glam = "0.27.0"
wasm-bindgen-futures = "0.4.42"
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "tiff"] }
web-sys = { version = "0.3.69", features = ['console'] }
tobj = { version = "4.0.2", default-features = false, features = ["async"] }
console_error_panic_hook ={ version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
